# LiDAR-Spatial-Tracker

./: .gitignore  README.md  main.py  pyproject.toml
analytics/: __init__.py  kpis.py
scripts/: generate_assets.py
simulator/: __init__.py  agent.py  scene.py
tracker/: __init__.py  base.py  clustering.py  kalman.py  registry.py  simple_tracker.py  sort_tracker.py  tracker.py
viz/: __init__.py  dashboard.py  realtime.py
