[project]
name = "lidar-spatial-tracker"
version = "0.1.0"
description = "Simulation LiDAR + pipeline tracking multi-objets + dashboard KPIs (CPU-only)"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "scikit-learn>=1.4",
    "filterpy>=1.4.5",
    "matplotlib>=3.8",
    "streamlit>=1.32",
    "plotly>=5.20",
    "pandas>=2.2",
]
